# lora-lyrics

./: .gitignore  OVERLEAF.txt  README.md
src/: 01_inspect.ipynb  02_preprocess.ipynb  03_classifier.ipynb  04_baselines.ipynb  04_figures.ipynb  05_baselines.ipynb  05_qlora_train.ipynb  05_train.ipynb  05_train_adapters.ipynb  06_evaluation.ipynb  06_inference.ipynb  07_blend.ipynb  07_test.ipynb  08_perplexity.ipynb  09_sw_compare.ipynb  clf_report.py  config.py  download_it.py  embedding_eval.py  evaluate.py  experiment_clf_epochs.py  gen_appendix.py  generation.py  models.py  perplexity.py  pyproject.toml  regen_clf_figures.py  regen_report_figures.py  style_loss.py
src/classifier/: __init__.py  classify.py  data.py  model.py  report.py  train.py
src/evaluation/: __init__.py  blend.py  metrics.py  perplexity.py
src/figures/: __init__.py  clf_report.py  regen_clf_figures.py  regen_report_figures.py
src/generation/: __init__.py  data.py  generate.py  model.py  style_loss.py  train.py
src/judge/: agreement.py  diversity.py  items.py  rubric.yaml  runner.py
src/results/: diversity.json
src/results/adapters/death/: dora_r8.json  lora_r8.json  lora_r8_sw.json
src/results/adapters/gojira/: dora_r8.json  lora_r16.json  lora_r4.json  lora_r8.json  lora_r8_sw.json
src/results/adapters/mastodon/: dora_r8.json  lora_r16.json  lora_r4.json  lora_r8.json  lora_r8_sw.json
src/results/adapters/opeth/: dora_r8.json  (+2 more)
src/results/blends/: blend_samples.json
src/results/embedding/: summary.json
src/results/judge/: agreement.json  items.jsonl  scores.jsonl
(+59 files in other folders)
