[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "datasets>=4.8.4",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "krippendorff>=0.8.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "openai>=2.41.1",
    "pandas>=3.0.2",
    "peft>=0.19.1",
    "pingouin>=0.6.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.5.1",
    "torch>=2.12.0",
    "tqdm>=4.67.3",
    "transformers>=5.8.1",
    "trl>=1.4.0",
]
